<resources>
    <string name="app_name">My cool notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note_button">+</string>
    <string name="new_note_textView">Новая заметка</string>
    <string name="description_field">Введи сюда свою заметку</string>
    <string name="name_field">Введи название заметки</string>
    <string name="date_field">Введи дату</string>
    <string name="save_note_button">Сохранить заметку</string>
    <string name="search_button">Поиск</string>
    <string name="add_note_button">Новая заметка</string>
    <string name="settings_button">Настройки</string>
    <string name="info">О приложении</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item">item</string>
    <string name="note_name">note name</string>
    <string name="data">data</string>
    <string name="delete_popup">Удалить</string>
    <string name="note_fragment_alert_title">Предупреждение</string>
    <string name="note_fragment_alert_message">Точно хочешь удалить?</string>
    <string name="note_fragment_alert_button_positive">Удалить</string>
    <string name="note_fragment_alert_button_negative">Нет</string>
</resources>