<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="1"
        android:title="@string/search_button"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/create_button"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="2"
        android:title="@string/add_note_button"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/info"
        android:title="@string/info"
        app:showAsAction="never"
        android:orderInCategory="99"/>
</menu>

