<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".note_description.NoteDescriptionFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_note_button"
        android:textSize="16sp"
        android:layout_gravity="end" />

    <EditText
        android:id="@+id/note_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:inputType="text"
        android:textSize="24sp"
        android:hint="@string/name_field"
        android:autofillHints="Заметка" />

    <EditText
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:inputType="date"
        android:textSize="24sp"
        android:hint="@string/date_field"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/note_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:gravity="start"
        android:inputType="text"
        android:textSize="24sp"
        android:hint="@string/description_field"
        android:importantForAutofill="no" />

</LinearLayout>